--- a/primid/src/main/webapp/index.html
+++ b/primid/src/main/webapp/index.html
@@ -95,7 +95,8 @@
 
 		<!--=== Home Section Starts ===-->
 		<div id="section-home" class="home-section-wrap center">
-			<div class="section-overlay"></div>
+			<div class="section-overlay">
+			</div>
 			<div class="container home">
 				<div class="row">
 					<h1 class="well-come">Conoce, disfruta y opina.</h1>
@@ -103,14 +104,15 @@
 					<div class="col-md-8 col-md-offset-2">
 						<p class="intro-message">Conoce lugares increibles en todo el planeta que esperan por ti.</p>
 
-						<div class="home-buttons">
-							<a href="#" class="fancy-button button-line button-white vertical">
-								Conoce la app
+						<div class="home-buttons" >
+
+							<a href="#" class="fancy-button button-line button-white vertical" data-toggle="modal"  >
+								Sign in
 								<span class="icon">
-									<i class="fa fa-gear"></i>
+									<i class="fa fa-leaf"></i>
 								</span>
 							</a>
-							<a href="#" class="fancy-button button-line button-white zoom">
+							<a href="#" class="fancy-button button-line button-white zoom" data-toggle="modal" data-target="#myModal1">
 								Registrate
 								<span class="icon">
 									<i class="fa fa-leaf"></i>
@@ -121,8 +123,54 @@
 				</div>
 			</div>
 		</div>
-		<!--=== Home Section Ends ===-->
-	</div>
+
+		<!-- Modal sign in -->
+
+            <!-- Modal sign in -->
+		<div id="myModal1" class="modal fade" role="dialog">
+					  <div class="modal-dialog">
+
+                <!-- Modal content-->
+                    <div class="modal-content">
+                              <div class="modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                             <h4 class="modal-title">Registro</h4>
+                                                      <form role="form" novalidate name="form" id="review-form" ng-submit="ctrl.saveRecord()">
+                                                        <div class="form-group">
+                                                        <label for="name">Nombre completo:</label>
+                                                        <input type="name"  id="name" name="name" class="form-control" ng-model="currentRecord.name">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="email">Correo:</label>
+                                                            <input type="email" name="email" class="form-control" id="email" ng-model="currentRecord.email">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="user">Usuario:</label>
+                                                            <input type="name" class="form-control" id="user" name="user" ng-model="currentRecord.user">
+                                                                </div>
+                                                                <div class="form-group">
+                                                            <label for="pass">Clave:</label>
+                                                            <input type="password" class="form-control" id="pass" name="pass" ng-model="currentRecord.pass">
+                                                                <div class="form-group">
+                                                            <label for="pwd">Confirmar Clave:</label>
+                                                            <input type="password" class="form-control" id="pwd">
+                                                                </div>
+                                                                <div class="checkbox">
+                                                            <label><input type="checkbox"> Recordar sesion</label>
+                                                                </div>
+                                                                 <button type="submit" class="btn btn-default" ng-click="ctrl.createRecord()">Registrarme</button>
+                                                          </form>
+                                                      <div class="modal-footer">
+                                                        <button type="button" class="btn btn-default" ng-click="ctrl.fetchRecords()" data-dismiss="modal">cerrar</button>
+                                                      </div>
+                                 </div>
+
+                  </div>
+                 </div>
+                </div>
+
+
+		<!--=== Home Section ends ===-->
         <!--=== Seccion de las cartas de los eventos ===-->
 	<section id="section-feature" class="section-step step-even step-wrap">
 		<div ui-view="idEvento"></div>
@@ -165,6 +213,8 @@
 
 		</section>
 		<!--=== Termina viajero ===-->
+
+
 
 
 
