--- a/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
+++ b/primid/src/main/webapp/src/modules/Itinerario/itinerario.tpl.html
@@ -1,180 +1,172 @@
+
+    <!--==== MailChimp Widget plugin ====-->
+
+    <script type="text/javascript" src="resources/js/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="resources/js/bootstrapValidator.min.js"></script>
+    <script type="text/javascript" src="resources/js/modernizr.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.easing.1.3.js"></script>
+
+    <!--==== Slider and Card style plugin ====-->
+    <script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
+
+    <!--==== MailChimp Widget plugin ====-->
+
+    <!--==== Scroll and navigation plugins ====-->
+    <script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.nav.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.appear.js"></script>
+    <script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
+
+    <!--==== Custom Script files ====-->
+    <script type="text/javascript" src="resources/js/custom.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+
+<div>
 <div ng-hide="ctrl.editMode" class="container step animated" data-animation="bounceInLeft" data-animation-delay="700" style="background-color:white;">
-<div class="row">
-<!-- Step Description Starts -->
-<div class="col-md-8 step-desc">
+    <div class="row">
+        <!-- Step Description Starts -->
+        <div class="col-md-8 step-desc">
 
-<div class="col-md-10 step-details">
-<h3 class="step-title color-scheme">Itinerarios</h3>
+            <div class="col-md-10 step-details">
+                <h3 class="step-title color-scheme">Itinerarios</h3>
 
-<!--Desde acá podras administrar todos tus <strong>itinerarios</strong> de forma simple y así planear las mejores <strong>vacaciones</strong> a través de todo el planeta.-->
-<p class="step-description"> Desde acá podras crear, editar, valorar y comentar todos tus <strong>itinerarios</strong> de modo simple. Permitenos ayudarte a planear tus mejores <strong>vacaciones</strong> a través de todo el planeta!.</p>
+                <!--Desde acá podras administrar todos tus <strong>itinerarios</strong> de forma simple y así planear las mejores <strong>vacaciones</strong> a través de todo el planeta.-->
+                <p class="step-description"> Desde acá podras crear, editar, valorar y comentar todos tus <strong>itinerarios</strong> de modo simple. Permitenos ayudarte a planear tus mejores <strong>vacaciones</strong> a través de todo el planeta!.</p>
 
-<!-- <div class="container pricing"> -->
+                <!-- <div class="container pricing"> -->
 
-<div class="row">
-<!-- Intinerario1 -->
-<div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="500">
-<div class="single-pricing">
+                <div class="row">
+                    <!-- Intinerario1 -->
+                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="500">
+                        <div class="single-pricing">
 
-<div class="pricing-head">
-<h5 class="pricing-heading color-scheme">Itinerario 1</h5>
-<div class="price">
+                            <div class="pricing-head">
+                                <h5 class="pricing-heading color-scheme">Itinerario 1</h5>
+                                <div class="price">
 
-<img src="resources/images/Intinerario1.jpg" alt="Intinerario 1" />
-</div>
-</div>
-
-
-<div class="sign-up">
-<a href="src/modules/Itinerario/itinerario1.tpl.html" target="iframe1" class="fancy-button button-line btn-col zoom">
-<p title="Ver" style="font-size:12px">Ver &#9992</p>
-<!--&#10084 corazon-->
-<!--&#9992 avion -->
-</a>
-</div>
-</div>
-</div>
-
-<!-- Intinerario2 -->
-<div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="700">
-<div class="single-pricing">
-
-<div class="pricing-head">
-<h5 class="pricing-heading color-scheme">Itinerario 2</h5>
-<div class="price">
-
-<img src="resources/images/Intinerario2.jpg" alt="Intinerario 2" />
-</div>
-</div>
+                                    <img src="resources/images/Intinerario1.jpg" alt="Itinerario 1" />
+                                </div>
+                            </div>
 
 
-<div class="sign-up">
-<a href="src/modules/Itinerario/itinerario2.tpl.html" target="iframe1" class="fancy-button button-line btn-col zoom">
-<p title="Ver" style="font-size:12px">Ver &#9992</p>
-<!--&#10084 corazon-->
-</a>
-</div>
-</div>
-</div>
+                            <div class="sign-up">
+                                <a href="#" target="iframe1" class="fancy-button button-line btn-col zoom">
+                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
+                                    <!--&#10084 corazon-->
+                                    <!--&#9992 avion -->
+                                </a>
+                            </div>
+                        </div>
+                    </div>
 
-<!-- Intinerario3 -->
-<div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900">
-<div class="single-pricing">
+                    <!-- Intinerario2 -->
+                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="700">
+                        <div class="single-pricing">
 
-<div class="pricing-head">
-<h5 class="pricing-heading color-scheme">Itinerario 3</h5>
-<div class="price">
+                            <div class="pricing-head">
+                                <h5 class="pricing-heading color-scheme">Itinerario 2</h5>
+                                <div class="price">
 
-<img src="resources/images/Intinerario3.jpg" alt="Intinerario 3" />
-</div>
-</div>
-
-
-<div class="sign-up">
-<a href="#" class="fancy-button button-line btn-col zoom">
-<p title="Ver" style="font-size:12px">Ver &#9992</p>
-<!--&#10084 corazon-->
-</a>
-</div>
-</div>
-</div>
-
-<!-- Intinerario4 -->
-<div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="1100">
-<div class="single-pricing">
-
-<div class="pricing-head">
-<h5 class="pricing-heading color-scheme">Itinerario 4</h5>
-<div class="price">
-
-<img src="resources/images/Intinerario4.jpg" alt="Intinerario 4" />
-</div>
-</div>
+                                    <img src="resources/images/Intinerario2.jpg" alt="Itinerario 2" />
+                                </div>
+                            </div>
 
 
-<div class="sign-up" >
-<a href="#" class="fancy-button button-line btn-col zoom">
-<p title="Ver" style="font-size:12px">Ver &#9992</p>
-<!--&#10084 corazon-->
-</a>
-</div>
-</div>
-</div>
+                            <div class="sign-up">
+                                <a href="#" target="iframe1" class="fancy-button button-line btn-col zoom">
+                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
+                                    <!--&#10084 corazon-->
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Intinerario3 -->
+                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900">
+                        <div class="single-pricing">
+
+                            <div class="pricing-head">
+                                <h5 class="pricing-heading color-scheme">Itinerario 3</h5>
+                                <div class="price">
+
+                                    <img src="resources/images/Intinerario3.jpg" alt="Itinerario 3" />
+                                </div>
+                            </div>
 
 
-</div>
-<!-- </div> --> <!--<ul class="sub-steps"><--> <!-- Sub steps here --><!-->
+                            <div class="sign-up">
+                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
+                                    <!--&#10084 corazon-->
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+
+                    <!-- Intinerario4 -->
+                    <div class="col-md-3 col-sm-4 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="1100">
+                        <div class="single-pricing">
+
+                            <div class="pricing-head">
+                                <h5 class="pricing-heading color-scheme">Itinerario 4</h5>
+                                <div class="price">
+
+                                    <img src="resources/images/Intinerario4.jpg" alt="Itinerario 4" />
+                                </div>
+                            </div>
 
 
-</div> <!-- End step-details -->
-</div>
-<div >
-
-<div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900" id="idResumen">
-<div class="single-pricing" align="middle" >
-
-<div class="price-head center" >
-<h5 class="pricing-heading color-scheme">Itinerario 3</h5>
-<div class="center" >
-
-<img  src="resources/images/Intinerario3.jpg" alt="Intinerario 3"  style="height:200px;width:250px"/>
-</div>
-</div>
-<ul class="package-features">
-<li><span ng-repeat="record in records" class="step-description"></span>Resumen: <td id="idNombre">Vacaciones en Estambul</td></li>
-<li><span class="step-description"></span>Fecha Inicio:<td id="idFechaInicio">2016/03/18</td> </li>
-<li><span class="step-description"></span>Fecha Final: <td id="idFechaFinal">2016/03/20</td></li>
-
-</ul>
-
-<div class="sign-up">
-<a href="#" class="fancy-button button-line btn-col zoom">
-                                                                                    <p title="Ver" style="font-size:12px" ui-sref="evento">Ver Eventos</p>
-<!--&#10084 corazon-->
-</a>
-</div>
-</div>
-</div>
+                            <div class="sign-up" >
+                                <a href="#" class="fancy-button button-line btn-col zoom">
+                                    <p title="Ver" style="font-size:12px">Ver &#9992</p>
+                                    <!--&#10084 corazon-->
+                                </a>
+                            </div>
+                        </div>
+                    </div>
 
 
-</div>
+                </div>
+                <!-- </div> --> <!--<ul class="sub-steps"><--> <!-- Sub steps here --><!-->
 
 
+                </div> <!-- End step-details -->
+            </div>
+            <div >
+
+                <div class="col-md-3 col-sm-6 single-pricing-wrap center animated" data-animation="bounceInLeft" data-animation-delay="900" id="idResumen">
+                    <div class="single-pricing" align="middle" >
+
+                        <div class="price-head center" >
+                            <h5 class="pricing-heading color-scheme">Itinerario 3</h5>
+                            <div class="center" >
+
+                                <img  src="resources/images/Intinerario3.jpg" alt="Itinerario 3"  style="height:200px;width:250px"/>
+                            </div>
+                        </div>
+                        <ul class="package-features">
+                            <li><span ng-repeat="record in records" class="step-description"></span>Resumen: <td id="idNombre">Vacaciones en Estambul</td></li>
+                            <li><span class="step-description"></span>Fecha Inicio:<td id="idFechaInicio">2016/03/18</td> </li>
+                            <li><span class="step-description"></span>Fecha Final: <td id="idFechaFinal">2016/03/20</td></li>
+
+                        </ul>
+
+                        <div class="sign-up">
+                            <a  ui-serf="evento" class="fancy-button button-line btn-col zoom">
+                                <p>Ver Eventos</p>
+                                <!--&#10084 corazon-->
+                            </a>
+                        </div>
+                    </div>
+                </div>
 
 
+            </div>
+        </div>
+    </div>
 </div>
 
-
-
-
-</div>
-
-
-
-
-<!--==== MailChimp Widget plugin ====-->
-
-<script type="text/javascript" src="resources/js/jquery-1.11.1.min.js"></script>
-<script type="text/javascript" src="resources/js/bootstrap.min.js"></script>
-<script type="text/javascript" src="resources/js/bootstrapValidator.min.js"></script>
-<script type="text/javascript" src="resources/js/modernizr.js"></script>
-<script type="text/javascript" src="resources/js/jquery.easing.1.3.js"></script>
-
-<!--==== Slider and Card style plugin ====-->
-<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
-<script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
-
-<!--==== MailChimp Widget plugin ====-->
-
-
-<!--==== Scroll and navigation plugins ====-->
-<script type="text/javascript" src="resources/js/jquery.nicescroll.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.nav.js"></script>
-<script type="text/javascript" src="resources/js/jquery.appear.js"></script>
-<script type="text/javascript" src="resources/js/jquery.fitvids.js"></script>
-
-<!--==== Custom Script files ====-->
-<script type="text/javascript" src="resources/js/custom.js"></script>
-<link rel="stylesheet" href="css/style.css" />
-<link rel="stylesheet" href="css/responsive.css" />
