--- a/primid/src/main/webapp/src/modules/evento/evento.tpl.html
+++ b/primid/src/main/webapp/src/modules/evento/evento.tpl.html
@@ -1,63 +1,28 @@
 
 
 <!--==== Slider and Card style plugin ====-->
-<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
+<!--<script type="text/javascript" src="resources/js/jquery.baraja.js"></script>
 <script type="text/javascript" src="resources/js/jquery.vegas.min.js"></script>
-<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>
+<script type="text/javascript" src="resources/js/jquery.bxslider.min.js"></script>-->
 
 <!--=== Features section Starts ===-->
-<div class="section-overlay"> </div>
-	<section>
-		<div class="container features center">
-                            <ul>
-                                <li class="left">
-                                    <ul class="list-inline">
-                                        <li><div id="bx-pager" class="left client-photos">
+<div class="container features center">
+    <div class="container-fluid">
+                    <ul>
+                        <li><h1 class="step-title color-scheme center">Eventos</h1></li>
 
-						<a data-slide-index="0" href="#viajero" class="photo-hold">
-							<span class="photo-bg">
-								<img src="resources/images/profile.jpg" alt="" /> <!-- Client photo 1 -->
-							</span>
-						</a>
-                                        </div>
-                                        </li>
-                                        <li><h3 class="step-title color-scheme">El nombre del viajero</h3></li>
-                                    </ul>
-                                </li>
-                                <li><br></li>
-                                <li>
-                                    <ul class="list-inline">
-                                        <li><input id="name" class="input-field form-item field-name" type="text" required="required" name="ciudad-evento" placeholder="Ciudad" />
-                                        </li>
-                                        <li>
-
-                                                             <!-- Collect the nav links, forms, and other content for toggling -->
-                                            <div class="collapse navbar-collapse" id="Evento-navbar">
-                                            <button id="create-evento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-pencil"></span> Create</button>
-                                            <button id="refresh-evento" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-circle-arrow-left"></span> Refresh</button>
-                                            <button id="save-evento" type="submit" form="evento-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode"><span class="glyphicon glyphicon-check"></span> Save</button>
-                                            <button id="cancel-evento" type="button" form="evento-form" class="btn btn-default navbar-btn" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
-                                            </div>
-                                            <alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
-                                                       <!-- Collect the nav links, forms, and other content for toggling -->
-                                            <div class="collapse navbar-collapse" id="editorial-navbar">
-                                             <button id="refresh-evento" class="fancy-button button-line btn-col small horizontal" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
-                                             <button class="fancy-button button-line btn-col small horizontal">
-                                                Buscar
-                                                    <span class="icon">
-                                                        <i class="fa fa-search"></i>
-                                                    </span>
-                                            </button>
-                                            </div>
-                                        </li>
-                                    </ul>
-
-                                </li>
-                            </ul>
-
-                    <br>
-
-                    <div ng-hide="ctrl.editMode">
+                        <li>                                              <!-- Collect the nav links, forms, and other content for toggling -->
+                            <div class="collapse navbar-collapse" id="Evento-navbar">
+                                <button id="create-evento" class="fancy-button button-line btn-col small horizontal" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-pencil"></span> Create</button>
+                                <button id="refresh-evento" class="fancy-button button-line btn-col small horizontal" ng-hide="ctrl.editMode" ng-click="ctrl.fetchRecords()"><span class="glyphicon glyphicon-circle-arrow-left"></span> Refresh</button>
+                                <button id="save-evento" type="submit" form="evento-form" class="fancy-button button-line btn-col small horizontal" ng-show="ctrl.editMode"><span class="glyphicon glyphicon-check"></span> Save</button>
+                                <button id="cancel-evento" type="button" form="evento-form" class="fancy-button button-line btn-col small horizontal" ng-show="ctrl.editMode" ng-click="form.$setPristine(); ctrl.fetchRecords();"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                            </div>
+                        </li>
+                    </ul>
+    </div>
+</div>
+<div ng-hide="ctrl.editMode">
     <div class="col-sm-12">
         <div ng-repeat="record in records">
             <div class="col-md-4 col-sm-6 col-lg-3 well">
@@ -70,83 +35,116 @@
                     <p><strong>Name:</strong> <span id="{{$index}}-name">{{record.name}}</span></p>
                     <p><strong>Description:</strong> <span id="{{$index}}-description">{{record.description}}</span></p>
                     <p><strong>Place:</strong> <span id="{{$index}}-place">{{record.place}}</span></p>
-                    <p><strong>Category:</strong> <span id="{{$index}}-categoryn">{{record.category}}</span></p>
                     <p><strong>Score:</strong> <span id="{{$index}}-score">{{record.score}}</span></p>
-                    <p><strong>Start Date:</strong> <span id="{{$index}}-startDate">{{record.startDate| date}}</span></p>
-                    <p><strong>End Date:</strong> <span id="{{$index}}-endDate">{{record.endDate| date}}</span></p>
-                    <p><strong>Ciudad:</strong> <span id="{{$index}}-ciudad">{{record.ciudad}}</span></p>
+                    <p><strong>Start date:</strong> <span id="{{$index}}-startDate">{{record.startDate| date}}</span></p>
+                    <p><strong>End date:</strong> <span id="{{$index}}-endDate">{{record.endDate| date}}</span></p>
+                    <p><strong>ciudad:</strong> <span id="{{$index}}-ciudad">{{record.ciudad}}</span></p>
                 </div>
                 <p class="text-center">
-                    <button id="{{$index}}-edit-btn" class="btn btn-default btn-sm" ng-click="ctrl.editRecord(record)"><span class="glyphicon glyphicon-edit"></span> Edit</button>
-                    <button id="{{$index}}-delete-btn" class="btn btn-default btn-sm" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
+                    <button id="{{$index}}-edit-btn" class="fancy-button button-line btn-col small horizontal" ng-click="ctrl.editRecord(record)"><span class="glyphicon glyphicon-edit"></span> Edit</button>
+                    <button id="{{$index}}-delete-btn" class="fancy-button button-line btn-col small horizontal" ng-click="ctrl.deleteRecord(record)"><span class="glyphicon glyphicon-minus"></span> Remove</button>
                 </p>
             </div>
         </div>
     </div>
 </div>
-                    <div  class="col-lg-12">
-						<!--Features container Starts -->
-						<ul id="card-ul" class="features-hold baraja-container">
 
-							<!-- Single Feature Starts ng-repeat -->
-							<li ng-repeat="record in records" class="single-feature" title="Card style" id="{{$index}}-card">
-								<img src="resources/images/monserrate-church.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">{{record.name}}</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
-								</p>
+<alert ng-repeat="alert in alerts" type="{{alert.type}}" close="ctrl.closeAlert($index)" dismiss-on-timeout="5000">{{alert.msg}} </alert>
+<div ng-show="ctrl.editMode" class="container features center section-overlay">
+    <form novalidate name="form" id="evento-form" role="form" ng-submit="ctrl.saveRecord()">
+        <alert ng-messages="form.$error" type="danger" close="" ng-hide="!form.$error.required">
+            <div ng-message="required">
+                Please, Fill the required fields
+            </div>
+        </alert>
+        <fieldset>
+            <input id="id" class="form-control" type="hidden" ng-model="currentRecord.id"/>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.name.$valid && form.name.$dirty, 'has-error': form.name.$invalid && (form.name.$dirty || form.$submitted)}" >
+                <label for="name" class="col-md-2 control-label">Name</label>
+                <div class="col-md-10">
+                    <input id="name" name="name" class="form-control" type="text" ng-model="currentRecord.name" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.description.$valid && form.description.$dirty, 'has-error': form.description.$invalid && (form.description.$dirty || form.$submitted)}" >
+                <label for="description" class="col-md-2 control-label">Description</label>
+                <div class="col-md-10">
+                    <input id="description" name="description" class="form-control" type="text" ng-model="currentRecord.description" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.place.$valid && form.place.$dirty, 'has-error': form.place.$invalid && (form.place.$dirty || form.$submitted)}" >
+                <label for="place" class="col-md-2 control-label">Place</label>
+                <div class="col-md-10">
+                    <input id="place" name="place" class="form-control" type="text" ng-model="currentRecord.place" required />
+                </div>
+            </div>
 
-									<a ui-serf="evento1" class="fancy-button button-line btn-col small vertical">
-										<p title="Información">Información</p>
-									</a>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.image.$valid && form.image.$dirty, 'has-error': form.image.$invalid && (form.image.$dirty || form.$submitted)}" >
+                <label for="image" class="col-md-2 control-label">Image</label>
+                <div class="col-md-10">
+                    <input id="image" name="image" class="form-control" type="text" ng-model="currentRecord.image" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': form.category.$valid && form.category.$dirty, 'has-error': form.category.$invalid && (form.category.$dirty || form.$submitted)}" >
+                <label for="category" class="col-md-2 control-label">Category</label>
+                <div class="col-md-10">
+                    <input id="category" name="category" class="form-control" type="text" ng-model="currentRecord.category" required />
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': !form.startDate.$error.required && form.startDate.$dirty, 'has-error': form.startDate.$error.required && (form.startDate.$dirty || form.$submitted)}" >
+                <label for="startDate" class="col-md-2 control-label">Start Date</label>
+                <div class="col-md-10">
+                    <p class="input-group">
+                        <input type="text" id="startDate" name="startDate" class="form-control" ng-model="currentRecord.startDate" ng-required="model.required" datepicker-popup is-open="opened" readonly/>
+                        <span class="input-group-btn">
+                            <button type="button" id="startDate-datepicker" class="btn btn-default" ng-click="open($event)"><span class="glyphicon glyphicon-calendar"></span></button>
+                        </span>
+                    </p>
+                </div>
+            </div>
+            <div class="form-group col-md-12" ng-class="{'has-success': !form.endDate.$error.required && form.endDate.$dirty, 'has-error': form.endDate.$error.required && (form.endDate.$dirty || form.$submitted)}" >
+                <label for="endDate" class="col-md-2 control-label">End Date</label>
+                <div class="col-md-10">
+                    <p class="input-group">
+                        <input type="text" id="endDate" name="endDate" class="form-control" ng-model="currentRecord.endDate" ng-required="model.required" datepicker-popup is-open="opened" readonly/>
+                        <span class="input-group-btn">
+                            <button type="button" id="endDate-datepicker" class="btn btn-default" ng-click="open($event)"><span class="glyphicon glyphicon-calendar"></span></button>
+                        </span>
+                    </p>
+                </div>
+            </div>
+<!--            Deberia ser un select para escoger la ciudad-->
+            <div class="form-group col-md-12" ng-class="{'has-success': !form.ciudad.$error.required && form.ciudad.$dirty, 'has-error': form.ciudad.$error.required && (form.ciudad.$dirty || form.$submitted)}" >
+                <label for="ciudad" class="col-md-2 control-label">Ciudad</label>
+                <div class="col-md-10">
+                    <input id="ciudad" name="ciudad" class="form-control" type="text" ng-model="currentRecord.ciudad" required />
+                </div>
+            </div>
+        </fieldset>
+    </form>
+</div>
 
-							</li>
-							<!-- Single Feature Ends -->
+<div class="container features center">
+
+                                    <ul class="list-inline">
+                                        <li><input id="name" class="input-field form-item field-name" type="text"/>
+                                        </li>
+                                        <li>
+                                                       <!-- Collect the nav links, forms, and other content for toggling -->
+                                            <div class="collapse navbar-collapse" id="editorial-navbar">
+                                             <button id="refresh-evento" class="fancy-button button-line btn-col small horizontal"><span class="glyphicon glyphicon-refresh"></span> Refresh</button>
+                                             <button class="fancy-button button-line btn-col small horizontal">
+                                                Buscar
+                                                    <span class="icon">
+                                                        <i class="fa fa-search"></i>
+                                                    </span>
+                                            </button>
+                                            </div>
+                                        </li>
+                                    </ul>
 
 
-
-							<!-- Single Feature Starts -->
-							<li class="single-feature" title="Card style" >
-								<img src="resources/images/Universal-studios.jpg" alt="" class="feature-image" /><!-- Feature Icon -->
-								<h4 class="feature-title color-scheme">Universal</h4>
-								<p class="feature-text">
-									Curabitur posuere feugiat ipsum, sed elementum tortor maximus ut.
-								</p>
-
-									<a ui-serf="evento1" class="fancy-button button-line btn-col small vertical">
-										<p title="Información">Información</p>
-									</a>
-							<!-- Single Feature Ends -->
-						</ul>
-						<!--Features container Ends -->
-
-						<!-- Features Controls Starts -->
-						<div class="features-control relative">
-							<button class="control-icon fancy-button button-line no-text btn-col bell" id="feature-prev" title="Previous" >
-								<span class="icon">
-									<i class="fa fa-arrow-left"></i>
-								</span>
-							</button>
-							<button class="control-icon fancy-button button-line no-text btn-col zoom" id="feature-expand" title="Expand" >
-								<span class="icon">
-									<i class="fa fa-expand"></i>
-								</span>
-							</button>
-							<button class="control-icon fancy-button button-line no-text btn-col zoom" id="feature-close" title="Collapse" >
-								<span class="icon">
-									<i class="fa fa-compress"></i>
-								</span>
-							</button>
-							<button class="control-icon fancy-button button-line no-text btn-col bell" id="feature-next" title="Next" >
-								<span class="icon">
-									<i class="fa fa-arrow-right"></i>
-								</span>
-							</button>
-						</div>
 						<!-- Features Controls Ends -->
-				</div>
-			</div>
-	</section>
+</div>
 	<!--=== Features section Ends ===-->
 
 
